Add guess the word game

--- a/samvidhan/templates/samvidhan/games.html
+++ b/samvidhan/templates/samvidhan/games.html
@@ -34,7 +34,7 @@
                 <p class='game-text'>Test your knowledge of constitutional terms and concepts with our Guess the Word game. Solve clues to fill in the blanks in the given number of chances only.</p>
             </div>
             <div class="game-action">
-                <a href="/crossword-puzzle" class="btn btn-primary">Play Now</a>
+                <a href="{% url 'guess' %}" class="btn btn-primary">Play Now</a>
             </div>
         </div>
     </div>
