--- a/samvidhan/templates/samvidhan/index.html
+++ b/samvidhan/templates/samvidhan/index.html
@@ -327,7 +327,7 @@
                         <div class="card-body" style="background: #5BBCFF;">
                             <h5 class="card-title">Guess the Word</h5>
                             <p class="card-text">Explore the Indian Constitution! Solve clues and fill in the blanks to learn key concepts.</p>
-                            <a href="{% url 'games'%}" class="btn btn-primary btn-block">Play Now</a>
+                            <a href="{% url 'guess'%}" class="btn btn-primary btn-block">Play Now</a>
                         </div>
                     </div>
                 </div>
