--- a/samvidhan/templates/samvidhan/wheel.html
+++ b/samvidhan/templates/samvidhan/wheel.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <<title>Samvidhan Jagrukta</title>
+    <title>Samvidhan Jagrukta</title>
     <link rel='icon' href={% static 'samvidhan/images/logo.png'%}/>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet" />
